--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "~TODO~",
+  "name": "imit8",
   "version": "0.0.1",
   "scripts": {
+    "server": "node server/server.js",
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
@@ -17,5 +18,16 @@
     "prettier-plugin-svelte": "^2.2.0",
     "svelte": "^3.34.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "passport": "^0.4.1",
+    "passport-github2": "^0.1.12",
+    "pg": "^8.7.1"
+  }
 }
