--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "devDependencies": {
     "@sveltejs/kit": "next",
+    "autoprefixer": "^10.3.3",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.34.0"
+    "svelte": "^3.34.0",
+    "tailwindcss": "^2.2.8"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "node-fetch": "^2.6.1"
+  }
 }
